# tgcat

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  build.sh  create_submission.sh  docker-compose.yml  rebuild.sh  requirements.txt  run_app.sh  test.sh
.dvc/: config
data/raw/r-1/completions/: 2020-02-14_active_completions.json.dvc  2020-02-14_completions.json.dvc
data/raw/r-1/downloads/: meta.csv.dvc  posts.csv.dvc
data/raw/r-2/completions/: project-1-at-2021-04-20-16-16-72cac916.json.dvc  project-1-at-2021-04-22-17-15-8c6ef1d0.json.dvc  project-1-at-2021-05-01-08-17-bb45665c.json.dvc  project-1-at-2021-05-02-05-39-0691dc6b.json.dvc  project-1-current.json.dvc
data/raw/r-2/downloads/: .gitignore  channels.txt.dvc
lib/: Build.dockerfile  Test.dockerfile  run_cmd.sh
lib/libtglang/: CMakeLists.txt  tglang.c
models/trained/tgcat/: ar_tgcat.pt.dvc  en_tgcat.pt.dvc  fa_tgcat.pt.dvc  ru_tgcat.pt.dvc  uz_tgcat.pt.dvc
notebooks/: 0.1-rg-build-model-tglang.ipynb  0.1-rg-build-model.ipynb  0.1-rg-tglang-data-prep.ipynb  0.2-rg-prepare-test-labelling.ipynb  0.2-rg-tglang-build-model.ipynb  0.3.0-rg-tglang-data-prep.ipynb  0.3.1-rg-build-model-tglang.ipynb  0.4-tg-dataset-eda.ipynb  0.5-rg-tglang-train-spe-tokenizer.ipynb  0.6-rg-tglang-transformers.ipynb  README.ipynb
notebooks/r-2/: 0.1-rg-prepare-test-labelling.ipynb  0.2-rg-build-model.ipynb  0.2.0-rg-prepare-data.ipynb  0.2.1-rg-neural-net.ipynb
src/: Build.dockerfile  Dockerfile  README.md  Test.dockerfile  Test.dockerignore  TestDockerfile  TestDockerfile.dockerignore  Tester.dockerfile  Tester.dockerignore  deb_packages.txt  eval.py  run_cmd.sh  zip_cmd.sh
src/inference/: CMakeLists.txt
src/inference/src/: annotator.cpp  annotator.h  db_document.cpp  db_document.h  detect.cpp  detect.h  document.cpp  document.h  nasty.cpp  tester.cpp  tgcat.cpp  tgcat.h  tglang.cpp  tglang.h
src/inference/src/embedders/: embedder.h  tfidf_embedder.cpp  tfidf_embedder.h  token_indexer.cpp
src/libtglang-tester/: CMakeLists.txt
src/tester/: CMakeLists.txt  tester.c  tgcat.h  tglang.h
src/tglang/: data.c  data.py  eval_cpp.py  langs_enum.txt
src/train/: README.md  __init__.py  app.py  data_utils.py  download.py  download_etl.py  files.yml  get_posts.py  labelling_tasks.py  neural.py  nlp_utils.py  plot_utils.py  predict.py  reference.py  requirements.txt  text_utils.py
src/webpage/: README.md  app.py  langs_enum_r2.txt  requirements.txt  tglang.pt
tests/: category_test_output.csv  language_test_output.csv  test_outputs.py
